TypeChecker/test_cases/bad/bad-self-4.cl
class SELF_TYPE {
  main( ) : Object { 5 } ; 

  foo(x : Int, y : String) : Int { 5 } ; 
} ;

class Main {
  main( ) : Object { 5 } ; 

  foo(x : Int, y : String) : Int { 5 } ; 
} ;
